WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218636
[Cocoa] REGRESSION(
r269211
): Text with emoji can trigger drawing corruption
https://bugs.webkit.org/show_bug.cgi?id=218636
Summary
[Cocoa] REGRESSION(r269211): Text with emoji can trigger drawing corruption
Myles C. Maxfield
Reported
2020-11-05 15:22:42 PST
[Cocoa] Text with emoji can trigger drawing corruption
Attachments
Patch
(9.35 KB, patch)
2020-11-05 15:27 PST
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.46 KB, patch)
2020-11-05 16:38 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2020-11-05 15:27:45 PST
Created
attachment 413356
[details]
Patch
Myles C. Maxfield
Comment 2
2020-11-05 15:29:22 PST
<
rdar://problem/71066011
>
Myles C. Maxfield
Comment 3
2020-11-05 16:38:11 PST
Created
attachment 413370
[details]
Patch
EWS
Comment 4
2020-11-05 17:45:46 PST
Committed
r269497
: <
https://trac.webkit.org/changeset/269497
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413370
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug